--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "scripts": {
     "build": "pika build",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "snyk-protect": "snyk protect",
+    "prepublish": "npm run snyk-protect"
   },
   "@pika/pack": {
     "pipeline": [
@@ -76,5 +78,8 @@
     "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "snyk": "^1.319.1"
+  },
+  "snyk": true
 }
